<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.merchy.taconeomoda.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/taconeostore"
            style="@style/TaconeoStore"
            android:contentDescription="@string/content_image"
            android:src="@drawable/taconeo_store" />


        <ImageView
            android:id="@+id/taconeologo"
            style="@style/TaconeoLogo"
            android:contentDescription="@string/content_image_logo"
            android:src="@drawable/taconeo_logo" />

        <TextView
            android:id="@+id/taconeodescripcion"
            style="@style/TaconeoDescription"
            android:text="@string/taconeo_description" />

        <LinearLayout style="@style/LinearLayout2">

            <TextView
                android:id="@+id/hours"
                style="@style/TaconeoInfo"
                android:drawableLeft="@drawable/ic_hours"
                android:drawableStart="@drawable/ic_hours"
                android:text="@string/taconeo_hours" />

            <TextView
                android:id="@+id/text_address"
                style="@style/TaconeoInfo"
                android:drawableLeft="@drawable/ic_location"
                android:drawableStart="@drawable/ic_location"
                android:text="@string/taconeo_address" />

            <TextView
                android:id="@+id/text_phone"
                style="@style/TaconeoInfo"
                android:autoLink="phone"
                android:drawableLeft="@drawable/ic_phone"
                android:drawableStart="@drawable/ic_phone"
                android:text="@string/taconeo_phone" />

            <TextView
                android:id="@+id/text_email"
                style="@style/TaconeoInfo"
                android:autoLink="email"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                android:text="@string/taconeo_mail" />

            <TextView
                android:id="@+id/text_web"
                style="@style/TaconeoInfo"
                android:autoLink="web"
                android:drawableLeft="@drawable/ic_web"
                android:drawableStart="@drawable/ic_web"
                android:text="@string/taconeo_web" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
